gdk/wayland/gdkdisplay-wayland.h
@@ -90,6 +90,8 @@ struct _GdkWaylandDisplay
   /* Keep a list of orphaned dialogs (i.e. without parent) */
   GList *orphan_dialogs;
 
+  GList *current_popups;
+
   struct wl_cursor_theme *scaled_cursor_themes[GDK_WAYLAND_THEME_SCALES_COUNT];
   gchar *cursor_theme_name;
   int cursor_theme_size;
